--- a/src/Components/ProductGallery/ProductGallery.scss
+++ b/src/Components/ProductGallery/ProductGallery.scss
@@ -6,9 +6,39 @@
     display: flex;
     flex-direction: column;
     gap: 2rem;
+    margin: 0 auto;
+    max-width: 340px;
+
+    @include mobile-medium {
+      max-width: 400px;
+    }
+
+    @include mobile-large {
+      max-width: 500px;
+    }
 
     @include tablet-small {
       flex-direction: row;
+      max-height: 410px;
+      max-width: 800px;
+    }
+
+    @include tablet-medium {
+      max-width: 1100px;
+    }
+
+    @include tablet-large {
+      max-height: 600px;
+      max-width: 1300px;
+    }
+
+    @include desktop-small {
+      max-width: 1600px;
+    }
+
+    @include desktop-large {
+      max-width: 2000px;
+      height: 800px;
     }
   }
 
@@ -16,19 +46,34 @@
   &__img-container {
     height: 100%;
     width: 100%;
+
+    @include tablet-medium {
+      overflow: hidden;
+    }
   }
 
   &__gallery-img {
     width: 100%;
-    height: 100%;
     border-radius: 4px;
+
+    @include tablet-small {
+      height: 100%;
+    }
+
+    @include tablet-medium {
+      height: 100%;
+    }
   }
 
   &__gallery-larger-container {
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    width: 100%;
+    border-radius: 4px;
+
+    @include tablet-medium {
+      width: 60%;
+    }
   }
 }
 
